# pytofu

./: .gitignore  .gitmodules  LICENSE  README.md  _notes.txt  pyproject.toml
.github/workflows/: publish.yml  test.yml
porting/: AI-Assistant-Contract.md  DECISION-LOG.md  FOR-PARTICIPANTS.md  MANDATORY-RULES.md  MASTER-PLAN.md  NEGOTIATION-GUIDELINES.md  NEGOTIATION.md  RESUME-A.md  RESUME-B.md  SESSION-STATE.md
porting/architecture/: python_pytofu_design.md  zig_tofu_analysis.md
porting/patterns/: advices_a.md  advices_b.md  advices_c.md  advices_d.md  textheaders_compatibility.md  zig_to_python.md  zig_to_python_validation.md
porting/specifications/: opcode.md  project_layout.md
src/pytofu/: __init__.py
tests/: test_hello.py
